--- a/4.order_system/k8s/depl_svc.yml
+++ b/4.order_system/k8s/depl_svc.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ko-order-backend
-  namespace: bradko-ns
+  namespace: bradko
 spec:
   replicas: 2
   selector:
@@ -59,7 +59,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ko-order-backend-service
-  namespace: bradko-ns
+  namespace: bradko
 spec:
   type: ClusterIP
   ports:
