--- a/4.order_system/k8s/ingress_cert.yml
+++ b/4.order_system/k8s/ingress_cert.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ordersystem-ingress
-  namespace: bradko-ns
+  namespace: bradko
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$1 
@@ -28,7 +28,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: my-issuer
-  namespace: bradko-ns
+  namespace: bradko
 spec:
   acme:
   # 인증서 서버 주소. 해당 서버의 리소스를 통해 인증서 발행
@@ -46,7 +46,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: server-jooncodehyuk-com-tls
-  namespace: bradko-ns
+  namespace: bradko
 spec:
   secretName: server-jooncodehyuk-com-tls
   duration: 2160h #90day
