--- a/4.order_system/k8s/depl_svc.yml
+++ b/4.order_system/k8s/depl_svc.yml
@@ -29,11 +29,11 @@ spec:
             secretKeyRef:
               name: ko-app-secrets
               key: DB_PW
-        - name: REDIS_HOST
-          valueFrom:
-            secretKeyRef:
-              name: ko-app-secrets
-              key: REDIS_HOST
+        # - name: REDIS_HOST
+        #   valueFrom:
+        #     secretKeyRef:
+        #       name: ko-app-secrets
+        #       key: REDIS_HOST
         - name: AWS_KEY
           valueFrom:
             secretKeyRef:
