--- a/4.order_system/src/main/resources/application.yml
+++ b/4.order_system/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   redis:
-    host: ${REDIS_HOST}
+    # host: ${REDIS_HOST}
+    host: redis-service
     port: 6379
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
